[package]
name = "cargo-coverage"
version = "0.1.0"
authors = ["Keith T. Star <uberfoo@me.com>"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
description = "A Cargo plugin for generating code coverage data."
documentation = "https://github.com/uberfoo/cargo-coverage"
homepage = "https://github.com/uberfoo/cargo-coverage"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
keywords = ["code-coverage", "cargo", "rust"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/uberfoo/cargo-coverage"
edition = "2021"

[[bin]]
name = "cargo-cover"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
